# python_module_example

./: .coveragerc  README.md  mypy.ini  pyproject.toml
.github/workflows/: test_and_qc.yaml  try01.yaml
minimuh/: core.py  main.py  text_wrappers.py
tests/: test_core.py  test_text_wrappers.py
